<resources>
    <string name="app_name">GoogleBooksApi</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title">Title</string>
    <string name="hardback">Hardback</string>
    <string name="softback">Softback</string>
    <string name="publisher">Publisher</string>
    <string name="isbn">ISBN</string>
    <string name="search">Search</string>

    <string name="book_details_fragment_title">Book details</string>

    <string name="owned">Owned</string>
    <string name="binding">Binding</string>
</resources>