<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colourBackground"
    tools:context=".BookDetailsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp"
        android:paddingStart="@dimen/base_unit_space"
        android:paddingEnd="@dimen/base_unit_space"
        android:paddingTop="@dimen/base_unit_space"
        android:hint="Title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/authorsWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/titleWrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp"
        android:paddingStart="@dimen/base_unit_space"
        android:paddingEnd="@dimen/base_unit_space"
        android:paddingTop="@dimen/base_unit_space"
        android:hint="Authors">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authorsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/publisherWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/authorsWrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="@dimen/base_unit_space"
        android:paddingEnd="@dimen/base_unit_space"
        android:paddingTop="@dimen/base_unit_space"
        android:hint="@string/publisher">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/publisherEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/isbnWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/publisherWrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="@dimen/base_unit_space"
        android:paddingEnd="@dimen/base_unit_space"
        android:paddingTop="@dimen/base_unit_space"
        android:hint="@string/isbn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/isbnEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroupLabel"
        android:labelFor="@+id/bindingRadioGroup"
        app:layout_constraintTop_toBottomOf="@+id/isbnWrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="@dimen/base_unit_space"
        android:paddingEnd="@dimen/base_unit_space"
        android:paddingTop="@dimen/base_unit_space"
        android:text="Binding" />

    <RadioGroup
        android:id="@+id/bindingRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="@dimen/base_unit_space"
        android:paddingEnd="@dimen/base_unit_space"
        android:text="Binding">

        <RadioButton
            android:id="@+id/hardbackRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hardback" />

        <RadioButton
            android:id="@+id/softbackRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/softback" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bindingRadioGroup" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bookDetailsActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_barcode_scan" />

</androidx.constraintlayout.widget.ConstraintLayout>